# life-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.agent/rules/: prompt.md  rule.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  main.py
app/agents/: __init__.py  base_agent.py  generator_agent.py  planner_agent.py  ranker_agent.py
app/api/routes/: runs.py
app/core/: config.py  database.py  logging.py
app/models/: base.py  molecule.py  run.py  trace.py
app/schemas/: molecule_schema.py  run_schema.py  trace_schema.py
app/services/: __init__.py  chemistry_tool.py  mutation_service.py  scoring_service.py
app/worker/: __init__.py  celery_app.py  tasks.py
tests/: test_agents.py  test_chemistry_tool.py  test_e2e.py  test_mutation_service.py
